--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -15,7 +15,7 @@
 </ul>
 
 <div class="add_user_btn">
-  <a id="add_user_btn" href="/users/new">Add user</a>
+  <a class="btn" href="/users/new">Add user</a>
 </div>
 
 {% endblock %}
