--- a/static/style.css
+++ b/static/style.css
@@ -27,11 +27,11 @@ button {
   background-color: rgb(151, 151, 151);
 }
 
-#cancel_btn,
-#add_user_btn {
+.btn {
   margin-top: 5px;
-  padding: 8.5px 15px;
+  padding: 8px 15px;
   margin-bottom: 20px;
+  margin-right: 2px;
   color: white;
   border-radius: 5px;
   border: none;
@@ -52,6 +52,14 @@ h1 {
   margin-bottom: 15px;
 }
 
+p {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+small {
+  font-style: italic;
+}
 nav a {
   color: rgb(151, 151, 151);
   text-decoration: none;
@@ -64,19 +72,26 @@ nav a {
   font-weight: bold;
 }
 
+.users_list:hover,
+.posts_list:hover {
+  color: rgb(35, 130, 240);
+  text-decoration: underline;
+}
+.users_list,
+.posts_list {
+  text-decoration: none;
+  color: rgb(35, 130, 240);
+}
+
 ul {
   list-style-type: none;
 }
 
-.users_list:hover {
-  color: rgb(35, 130, 240);
-  text-decoration: underline;
+li {
+  margin: 10px 40px;
 }
-.users_list {
-  text-decoration: none;
-  color: rgb(35, 130, 240);
-}
-.add_user_btn {
+.add_user_btn,
+.add_post_btn {
   margin-top: 20px;
 }
 
@@ -95,5 +110,22 @@ ul {
 }
 
 img {
-  width: 100px;
+  width: 150px;
+  margin: -10px 10px 0px -10px;
+}
+
+.user_page {
+  display: flex;
+}
+
+.posts_list_users_page {
+  list-style-type: initial;
+  color: rgb(35, 130, 240);
+}
+
+.flashed_messages {
+  margin-bottom: 20px;
+  background-color: rgb(129, 233, 129);
+  width: 50%;
+  padding: 7px;
 }
