--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -7,7 +7,7 @@
 <h1>Edit a user</h1>
 <form method="POST">
 
-  <div class="form-group row">
+  <div>
     <label for="first_name" >First Name</label>
     <div>
       <input type="text"
@@ -19,7 +19,7 @@
 
   <div>
     <label for="last_name">Last Name</label>
-    <div class="col-sm-10">
+    <div>
       <input type="text"
              id="last_name"
              name="last_name"
@@ -29,7 +29,7 @@
 
   <div>
     <label for="image_url">Image URL</label>
-    <div class="col-sm-10">
+    <div>
       <input type="text"
              id="image_url"
              name="image_url"
@@ -38,7 +38,7 @@
   </div>
 
   <div>
-    <a id="cancel_btn" href="/users">Cancel</a>
+    <a class="btn" href="/users">Cancel</a>
     <button type="submit">Save</button>
   </div>
 
