--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,26 @@
       <a href="/users" id="users">Users</a>
     </li>
   </ul>
-  <ul class="navig" id="item_3">
+  <ul class="navig">
     <li>
-      <a href="/users/new" id="add_user">Add User</a>
-    </li>
+      <a href="/tags">Tags</a></li>
   </ul>
+
+  <div class="nav_add_btn">
+    <ul class="navig">
+      <li>
+        <a href="/users/new" id="add_user">Add User</a>
+      </li>
+    </ul>
+    <ul>
+      <li class="navig">
+        <a href="/tags/new" id="add_tag">Add Tag</a>
+      </li>
+    </ul>
+    
+    
+  </div>
+
 
 </nav>
 <div class="content">
