--- a/static/style.css
+++ b/static/style.css
@@ -8,14 +8,7 @@
   margin-left: 200px;
 }
 
-input {
-  padding: 5px;
-  border-radius: 1px;
-  border: solid 1px lightgray;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  min-width: 20%;
-}
+/* Buttons */
 
 button {
   margin-top: 5px;
@@ -39,6 +32,30 @@ button {
   text-decoration: none;
 }
 
+.add_user_btn,
+.add_post_btn {
+  margin-top: 20px;
+}
+
+#add_user,
+#add_tag {
+  margin-top: 5px;
+  margin-right: -5px;
+  padding: 5px 8px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(151, 151, 151);
+  text-decoration: none;
+  color: white;
+}
+
+.nav_add_btn {
+  margin-left: auto;
+  display: flex;
+}
+
+/* Navigation */
+
 nav {
   display: flex;
   background-color: rgb(49, 49, 49);
@@ -46,6 +63,12 @@ nav {
 
 .navig {
   padding: 15px;
+}
+
+nav a {
+  color: rgb(151, 151, 151);
+  text-decoration: none;
+  font-size: 18px;
 }
 
 h1 {
@@ -60,11 +83,6 @@ p {
 small {
   font-style: italic;
 }
-nav a {
-  color: rgb(151, 151, 151);
-  text-decoration: none;
-  font-size: 18px;
-}
 
 #blogly_nav {
   color: white;
@@ -72,8 +90,11 @@ nav a {
   font-weight: bold;
 }
 
+/* User&Post List Links*/
+
 .users_list:hover,
-.posts_list:hover {
+.posts_list:hover,
+.tags_list:hover {
   color: rgb(35, 130, 240);
   text-decoration: underline;
 }
@@ -90,29 +111,6 @@ ul {
 li {
   margin: 10px 40px;
 }
-.add_user_btn,
-.add_post_btn {
-  margin-top: 20px;
-}
-
-#add_user {
-  margin-top: 5px;
-  padding: 5px 8px;
-  border-radius: 5px;
-  border: none;
-  background-color: rgb(151, 151, 151);
-  text-decoration: none;
-  color: white;
-}
-
-#item_3 {
-  margin-left: auto;
-}
-
-img {
-  width: 150px;
-  margin: -10px 10px 0px -10px;
-}
 
 .user_page {
   display: flex;
@@ -123,9 +121,61 @@ img {
   color: rgb(35, 130, 240);
 }
 
+/* Flashing */
+
 .flashed_messages {
   margin-bottom: 20px;
   background-color: rgb(129, 233, 129);
   width: 50%;
   padding: 7px;
+}
+
+/* Tags */
+
+.tags_list {
+  text-decoration: none;
+  color: rgb(35, 130, 240);
+  background-color: rgb(228, 228, 228);
+  border-radius: 5px;
+  padding: 2px;
+}
+
+.check_boxes {
+  margin-left: -110px;
+}
+
+.label_checkbox {
+  margin-left: -115px;
+}
+
+.tags_page {
+  text-decoration: none;
+  color: rgb(35, 130, 240);
+}
+.tags_list_page {
+  list-style-type: initial;
+  color: rgb(35, 130, 240);
+}
+
+/* Input */
+
+textarea {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+input {
+  padding: 5px;
+  border-radius: 1px;
+  border: solid 1px lightgray;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  min-width: 20%;
+}
+
+/* Images */
+
+img {
+  width: 150px;
+  margin: -10px 10px 0px -10px;
 }
