--- a/templates/posts/homepage.html
+++ b/templates/posts/homepage.html
@@ -14,6 +14,17 @@
 <p>
   <small>By {{ post.user.full_name }} on {{ post.formated_date }}</small>
 </p>
+
+
+{% if post.tags %}
+<p>
+  <b>Tags:</b>
+  {% for tag in post.tags %}
+  <a class=" tags_list" href="/tags/{{ tag.id }}"><i>{{ tag.name }}</i></a>
+  {% endfor %}
+</p>
+{% endif %}
+
 {% endfor %}
 
 {% endblock %}}
