--- a/templates/posts/new.html
+++ b/templates/posts/new.html
@@ -22,6 +22,20 @@
     </div>
   </div>
 
+  <div>
+    {% for tag in tags %}
+    <div>
+      <input type="checkbox"
+             value="{{ tag.id }}"
+             id="tag_{{ tag.id }}"
+             name="tags">
+      <label for="tag_{{ tag.id }}">
+        {{ tag.name }}
+      </label>
+    </div>
+    {% endfor %}
+  </div>
+  
     <div>
       <a class="btn" href="/users/{{ user.id }}" >Cancel</a>
       <button type="submit">Add</button>
